--- a/src/assets/scss/03-components/_people-list.scss
+++ b/src/assets/scss/03-components/_people-list.scss
@@ -23,6 +23,7 @@ li.people__list--item {
     width: 128px;
     height: 128px;
     margin: 0;
+    border-radius: 1000px;
     border-radius: 100%;
   }
   h6 {
